<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ecebeb">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <include layout="@layout/toolbar_layout"/>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:isScrollContainer="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/colorPrimaryLight">

                <ImageView

                        android:id="@+id/final_image"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/camera_grey"
                        android:visibility="gone"/>

                <LinearLayout
                        android:id="@+id/lin_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="1"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_10"
                        android:gravity="center">

                    <LinearLayout
                            android:id="@+id/camera_lay"
                            android:layout_width="0dp"
                            android:layout_weight=".5"
                            android:layout_height="match_parent"
                            android:gravity="center">

                        <ImageView
                                android:id="@+id/camera"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"

                                android:src="@drawable/camera_grey"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/gallery_lay"
                            android:layout_width="0dp"
                            android:layout_weight=".5"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:gravity="center">

                        <ImageView
                                android:id="@+id/gallery"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/gallary_grey"/>
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"

                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                    <EditText
                            android:id="@+id/dummy_edt"
                            android:layout_width="1dp"
                            android:layout_height="1dp"
                            android:background="@android:color/transparent"
                            android:cursorVisible="false"
                            android:visibility="visible"
                            tools:ignore="TextFields"/>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                        <android.support.design.widget.TextInputLayout
                                android:id="@+id/id_edt_title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="2dp"
                                android:layout_marginTop="3dp"
                                android:divider="@color/md_black_1000"
                                app:hintTextAppearance="@android:style/TextAppearance.Small">

                            <EditText
                                    android:id="@+id/edt_title"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_centerVertical="true"
                                    android:layout_marginBottom="0dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_toRightOf="@+id/edit_title_image"
                                    android:background="#00000000"
                                    android:gravity="center_vertical"
                                    android:hint="@string/title"
                                    android:imeOptions="actionNext"
                                    android:inputType="textCapSentences|textAutoCorrect"
                                    android:paddingBottom="5dp"
                                    android:textColor="@color/md_black_1000"
                                    android:textColorHint="@color/md_grey_500"
                                    android:textSize="@dimen/txt_15"/>

                        </android.support.design.widget.TextInputLayout>

                    </RelativeLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="4dp"
                            android:background="@color/md_grey_400"/>


                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                        <android.support.design.widget.TextInputLayout
                                android:id="@+id/it_edit_description"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="2dp"
                                android:layout_marginTop="2dp"

                                android:divider="@color/md_black_1000"
                                app:hintTextAppearance="@android:style/TextAppearance.Small">

                            <EditText
                                    android:id="@+id/edt_description"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="0dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_toRightOf="@+id/edit_title_image"
                                    android:background="#00000000"
                                    android:gravity="center_vertical"
                                    android:hint="@string/description"
                                    android:imeOptions="actionNext"
                                    android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                                    android:paddingBottom="5dp"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:textColor="@color/md_black_1000"
                                    android:textColorHint="@color/md_grey_500"
                                    android:textSize="@dimen/txt_15"/>
                        </android.support.design.widget.TextInputLayout>

                    </RelativeLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/md_grey_400"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:visibility="visible">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="7dp"
                                android:layout_marginTop="10dp"
                                android:text="Add Location"
                                android:textColor="@color/md_black_1000"
                                android:textSize="@dimen/txt_18"/>

                        <RadioButton
                                android:id="@+id/radio_currentloc"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="5"
                                android:layout_marginTop="@dimen/margin_5"
                                android:text="Get Current location"
                                android:textAllCaps="false"
                                android:textSize="@dimen/txt_15"/>
                        <RadioButton
                                android:id="@+id/ratio_customloc"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="5"
                                android:layout_marginTop="@dimen/margin_5"
                                android:text="Add Your location"
                                android:textAllCaps="false"
                                android:textSize="@dimen/txt_15"/>
                        <android.support.design.widget.TextInputLayout
                                android:id="@+id/it_edit_address"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="2dp"
                                android:layout_marginTop="2dp"
                                android:visibility="gone"
                                android:divider="@color/md_black_1000"
                                app:hintTextAppearance="@android:style/TextAppearance.Small">

                            <EditText
                                    android:id="@+id/edt_address"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="0dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_toRightOf="@+id/edit_title_image"
                                    android:background="#00000000"
                                    android:gravity="center_vertical"
                                    android:hint="@string/location"
                                    android:imeOptions="actionNext"
                                    android:layout_margin="@dimen/margin_5"
                                    android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                                    android:paddingBottom="5dp"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:textColor="@color/md_black_1000"
                                    android:textColorHint="@color/md_grey_500"
                                    android:textSize="@dimen/txt_15"/>

                        </android.support.design.widget.TextInputLayout>
                        <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="5dp"
                                android:background="@color/md_grey_400"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:layout_marginLeft="7dp"
                                android:layout_marginTop="10dp"
                                android:layout_weight="1">
                            <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/category"
                                    android:layout_weight=".9"
                                    android:textColor="@color/md_black_1000"
                                    android:textSize="@dimen/txt_18"/>


                            <TextView
                                    android:id="@+id/addCategory_tv"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight=".1"
                                    android:text="+"
                                    android:gravity="right"
                                    android:padding="@dimen/margin_5"
                                    android:textStyle="bold"
                                    android:textColor="@color/md_blue_800"
                                    android:textSize="@dimen/txt_18"/>
                        </LinearLayout>

                        <Spinner
                                android:id="@+id/categorySpinner"
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:textColor="@color/md_grey_900"/>
                        <TextView
                                android:id="@+id/error_tv"
                                android:layout_width="match_parent"
                                android:visibility="gone"
                                android:layout_marginRight="@dimen/margin_5"
                                android:layout_marginLeft="@dimen/margin_5"
                                android:textColor="@color/md_red_900"
                                android:textSize="@dimen/txt_12"
                                android:layout_height="wrap_content"/>
                        <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="5dp"
                                android:background="@color/md_grey_400"/>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/md_white_1000">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">


                    <Button
                            android:id="@+id/btn_cancel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:background="@color/md_grey_600"
                            android:text="@string/cancel"
                            android:textAllCaps="false"
                            android:textSize="@dimen/txt_18"/>

                    <View
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/md_grey_400"/>

                    <Button
                            android:id="@+id/btn_submit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:background="@color/md_green_500"
                            android:text="@string/submit"
                            android:textAllCaps="false"
                            android:textSize="@dimen/txt_18"

                    />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>